Flickering Fixed

--- a/src/app.css
+++ b/src/app.css
@@ -305,7 +305,7 @@ button:focus-visible {
 
 .group-icon {
   position: relative;
-  background-color: rgba(0, 0, 0, 0.422);
+  background-color: rgba(36, 36, 36, 1);
   border-radius: 6px;
   margin-top: var(--group-spacing, 0.1em);  /* controls space above each group */
   display: flex;
